[gd_scene load_steps=10 format=3 uid="uid://tu5yapuuup4a"]

[ext_resource type="Texture2D" uid="uid://dw0ys3ru3auy8" path="res://entities/assets/sprites/collectibles/Banana.png" id="1_bt3vw"]
[ext_resource type="Script" path="res://entities/projectiles/Banana.gd" id="1_exctg"]
[ext_resource type="AudioStream" uid="uid://bs4jblidy78lf" path="res://entities/assets/sounds/laugh_track.mp3" id="3_m46f6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3rxry"]
atlas = ExtResource("1_bt3vw")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn5g5"]
atlas = ExtResource("1_bt3vw")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_baphp"]
atlas = ExtResource("1_bt3vw")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u483i"]
atlas = ExtResource("1_bt3vw")
region = Rect2(96, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_10iqt"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rxry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn5g5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_baphp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u483i")
}],
"loop": true,
"name": &"dropt",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rvabd"]
radius = 9.0

[node name="Banana" type="Area2D"]
script = ExtResource("1_exctg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 0)
sprite_frames = SubResource("SpriteFrames_10iqt")
animation = &"dropt"
frame_progress = 0.677087

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rvabd")

[node name="SlipSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_m46f6")
volume_db = -40.0

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
